# projet-vision

./: .gitignore  CMakeLists.txt  conanfile.txt  installer opencv + contrib.odt
docs/: _config.yml  index.md
python/: pixel.py  script.py  webcam.py
script/: README.txt  alignement.py  persons.csv
scripts/: README.md  facedetect.py  facedetect.sh  imagedetect.py  traincascade.sh  videodetect.py
src/: CMakeLists.txt  main.cpp
